Update to compile with java 11